--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "angular-primeng",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "license": "MIT",
+  "author": {
+    "name": "Sandip Chitale"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sandipchitale/angular-primeng"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -18,6 +26,9 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "primeflex": "^3.3.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^15.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
